fix broken links, update where needed and remove unused sections

--- a/index.html
+++ b/index.html
@@ -13,13 +13,16 @@
         <img src="assets/kruize-icon.png" alt="Kruize Logo" class="logo">
         <div class="nav">
             <a href="#">Home</a>
-            <a href="#">Features</a>
-            <a href="#">Pricing</a>
             <a href="docs">Docs</a>
-            <a href="#">Contact</a>
+            <a href="#">Demos</a>
+            <a href="#">Blog</a>
             <div class="icons">
-                <img src="assets/github-icon.png" alt="GitHub">
-                <img src="assets/slack-icon.png" alt="Slack">
+                <a href="https://github.com/kruize/autotune">
+                    <img src="assets/github-icon.png" alt="GitHub">
+                </a>
+                <a href="https://join.slack.com/t/kruizeworkspace/shared_invite/zt-2i2bs72qr-mfJU3uqcWXXSUv~O0~rbog">
+                    <img src="assets/slack-icon.png" alt="Slack">
+                </a>
             </div>
         </div>
     </div>
@@ -32,7 +35,9 @@
         <div class="hero-text">
             <h1>Optimize Your Kubernetes Costs</h1>
             <p>Monitor and reduce your Kubernetes cloud spending with real-time insights.</p>
-            <button class="cta-button" onclick="alert('Get Started!')">Get Started</button>
+            <a href="https://github.com/kruize/autotune/blob/master/docs/autotune_install.md">
+                <button class="cta-button" >Get Started</button>
+            </a>
         </div>
         <div class="hero-image">
             <div style="position: relative; padding-bottom: 56.25%; height: 0;">
@@ -96,10 +101,10 @@
         <h2 style="text-align:center;">Runs on Any of These Kubernetes Environments</h2>
         <div class="environment">
             <div class="env-box">
-                <img src="assets/aws.png" alt="GitHub">
+                <img src="assets/OpenShift-LogoType.svg.png" alt="Openshift Icon">
             </div>
             <div class="env-box">
-                <img src="assets/k8s-image.png " alt="GitHub">
+                <img src="assets/k8s-image.png " alt="Kubernetes Icon">
             </div>
             <div class="env-box">
                 On-Premises</div>
@@ -113,10 +118,15 @@
         <h2 style="text-align:center;">Get Up and Running in 5 Minutes</h2>
 
         <div class="getting-started">
-
-            <div class="step-box">1. Schedule a demo</div>
-            <div class="step-box">2. Config your Costs</div>
-            <div class="step-box">3. Start Optimizing!</div>
+            <a href="https://github.com/kruize/autotune/blob/master/docs/autotune_install.md">
+                <div class="step-box">1. Setup Kruize</div>
+            </a>
+            <a href="https://kruize.github.io/kruize-website/docs/performance_profiles.html">
+                <div class="step-box">2. Configure your Costs</div>
+            </a>
+            <a href="https://kruize.github.io/kruize-website/docs/lm_create_exp.html">
+                <div class="step-box">3. Start Optimizing!</div>
+            </a>
         </div>
     </div>
     <div class="community-call"></div>
@@ -132,29 +142,14 @@
 
         <!-- Center Section -->
         <div class="footer-center">
-            <ul>
-                <li><a href="#">Features</a></li>
-                <li><a href="#">Pricing</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">We're Hiring!</a></li>
-            </ul>
-            <ul>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Docs</a></li>
-                <li><a href="#">Tutorials</a></li>
-                <li><a href="#">Partners</a></li>
-                <li><a href="#">Status</a></li>
-            </ul>
         </div>
 
         <!-- Right Section -->
         <div class="footer-right">
             <a href="mailto:kruize@redhat.com"><u>team@kruize.com</u></a>
             <div class="social-icons">
-                <a href="#"><img src="assets/github-icon.png" alt="GitHub"></a>
-                <a href="#"><img src="assets/linkedin-icon.png" alt="LinkedIn"></a>
-                <a href="#"><img src="assets/yt-icon.png" alt="YouTube"></a>
-                <a href="#"><img src="assets/slack-black.png" alt="Slack"></a>
+                <a href="https://github.com/kruize/autotune"><img src="assets/github-icon.png" alt="GitHub"></a>
+                <a href="https://join.slack.com/t/kruizeworkspace/shared_invite/zt-2i2bs72qr-mfJU3uqcWXXSUv~O0~rbog"><img src="assets/slack-black.png" alt="Slack"></a>
             </div>
         </div>
     </footer>
