--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="hero-text">
             <h1>Optimize Your Kubernetes Costs</h1>
             <p>Monitor and reduce your Kubernetes cloud spending with real-time insights.</p>
-            <a href="https://github.com/kruize/autotune/blob/master/docs/autotune_install.md">
+            <a href="https://github.com/kruize/kruize-demos/tree/main/monitoring/local_monitoring">
                 <button class="cta-button" >Get Started</button>
             </a>
         </div>
@@ -118,7 +118,7 @@
         <h2 style="text-align:center;">Get Up and Running in 5 Minutes</h2>
 
         <div class="getting-started">
-            <a href="https://github.com/kruize/autotune/blob/master/docs/autotune_install.md">
+            <a href="https://github.com/kruize/autotune/blob/master/docs/autotune_install.md" style="text-decoration:none;">
                 <div class="step-box">1. Setup Kruize</div>
             </a>
             <div class="step-box">2. Configure your Costs</div>
@@ -135,9 +135,10 @@
         
         <!-- Center Section -->
         <div class="footer-center">
-            <div class="gap"></div>
-            <p>Copyright IBM Corp. 2025. All rights reserved.<br>Designed & built in India.</p>
-            <p>Terms| Privacy Policy</p>
+            <ul>
+                <li>Copyright IBM Corp. 2025. All rights reserved.</li>
+                <li>Terms| Privacy Policy</li>
+            </ul>
         </div>
 
         <!-- Right Section -->
