--- a/index.html
+++ b/index.html
@@ -132,14 +132,13 @@
         <!-- Left Section -->
         <div class="footer-left">
             <img class="kruize-footer" src="assets/kruize-vertical.png" alt="Kruize Logo">
+            <p>Copyright IBM Corp. 2025. All rights reserved.</p>
+            <p>Terms| Privacy Policy</p>
         </div>
         
         <!-- Center Section -->
         <div class="footer-center">
-            <ul>
-                <li>Copyright IBM Corp. 2025. All rights reserved.</li>
-                <li>Terms| Privacy Policy</li>
-            </ul>
+
         </div>
 
         <!-- Right Section -->
